# nats-s3-connector

./: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose-dev.yaml  docker-compose.yaml  justfile
.github/workflows/: publish.yaml  test.yaml
cli/: Cargo.toml
cli/src/: config.rs  interactive.rs  main.rs  output.rs
cli/src/commands/: config.rs  load.rs  mod.rs  store.rs
client/: Cargo.toml
client/src/: error.rs  lib.rs  tests.rs
examples/: config.local.toml  config.toml  config.yaml  docker-compose-dev.yaml  docker-compose.yaml
server/: Cargo.toml  Dockerfile
server/src/: app.rs  completer.rs  config.rs  coordinator.rs  encoding.rs  error.rs  io.rs  jobs.rs  main.rs  metrics.rs  nats.rs  registry.rs  s3.rs  shutdown.rs
server/src/db/: chunks.rs  inmem.rs  jobs.rs  mod.rs
server/src/db/postgres/: chunks.rs  chunks_tests.rs  jobs.rs  jobs_tests.rs  mod.rs  models.rs  postgres.rs  tests.rs
server/src/db/postgres/migrations/: V1__initial_schema.sql  V2__add_chunks_table.sql
server/src/server/: load.rs  metrics.rs  mod.rs  status.rs  store.rs
server/web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
server/web/src/: app.tsx  main.tsx
server/web/src/api/: http.ts  index.ts  load.ts  store.ts
server/web/src/components/: Button.tsx  ConfirmDialog.tsx  CreateLoadJobModal.tsx  CreateStoreJobModal.tsx  EmptyState.tsx  Modal.tsx  Spinner.tsx  Table.tsx
server/web/src/hooks/: useCreateLoadJob.ts  useCreateStoreJob.ts  useDeleteLoadJob.ts  useDeleteStoreJob.ts  useLoadJobs.ts  usePauseLoadJob.ts  usePauseStoreJob.ts  useResumeLoadJob.ts  useResumeStoreJob.ts  useStoreJobs.ts
server/web/src/pages/: Dashboard.tsx  LoadJobDetail.tsx  StoreJobDetail.tsx
server/web/src/styles/: globals.css
server/web/src/types/: common.ts  load.ts  store.ts
server/web/src/utils/: status.ts  time.ts
src/: app.rs  config.rs  encoding.rs  io.rs  jobs.rs  main.rs  metrics.rs  nats.rs  s3.rs  server.rs
src/db/: inmem.rs  mod.rs
src/db/postgres/: mod.rs  models.rs  tests.rs
src/handlers/: load.rs  mod.rs  store.rs
src/server/: dependencies.rs  load.rs  metrics.rs  mod.rs  status.rs  store.rs
test/: Cargo.toml
test/src/: config.rs  main.rs  message.rs  setup.rs  test.rs  verify.rs
types/: Cargo.toml
types/src/: lib.rs
