[package]
name = "nats3"
version = "0.1.0"
edition = "2021"

[features]
integration = []

[dependencies]
anyhow = "1.0.100"
async-nats = "0.45.0"
aws-config = "1.8.11"
aws-sdk-s3 = "1.115.0"
axum = {version = "0.8.7", features = ["macros"]}
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
hyper = "1.8.1"
futures = "0.3.31"
lazy_static = "1.5.0"
rust-s3 = { version = "0.37.0" }
serde = "1.0.228"
serde_json = { version = "1.0" }
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6.7", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper-util = "0.1.18"
figment = { version = "0.10.19", features = ["env", "toml", "yaml"]}
async-trait = "0.1.89"
thiserror = "2.0.17"
ulid = "1.2.1"
strum_macros = "0.27.2"
prometheus-client = "0.24.0"
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
chrono = { version = "0.4", features = ["serde"] }
bb8 = "0.9.1"
bb8-postgres = "0.9.0"
postgres-types = { version = "0.2.11", features = ["derive", "with-chrono-0_4"] }

[dev-dependencies]
testcontainers = "0.26.0"
testcontainers-modules = { version = "0.14.0", features = ["postgres"]}
uuid = { version = "1.0", features = ["v4"] }
