[workspace]
members = ["server", "types", "client", "cli"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
ulid = "1.2"
