[workspace]
members = ["server", "types", "client", "cli", "test"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
ulid = "1.2"
async-nats = "0.45"
rust-s3 = "0.37.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9.2"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
