[package]
name = "nats3-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nats3"
path = "src/main.rs"

[dependencies]
nats3-client = { path = "../client" }
nats3-types = { path = "../types" }
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
confy = "2.0.0"
dirs = "6.0"
comfy-table = "7.2.1"
colored = "3.0"
inquire = "0.9.1"
