[package]
name = "nats3-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nats3"
path = "src/main.rs"

[dependencies]
nats3-client = { path = "../client" }
nats3-types = { path = "../types" }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
confy = "2.0.0"
dirs = "6.0"
comfy-table = "7.2.1"
colored = "3.0"
inquire = "0.9.1"
