[package]
name = "nats3-client"
version = "0.1.0"
edition = "2021"

[dependencies]
nats3-types = { path = "../types" }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { workspace = true, features = ["derive"]  }
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
mockito = "1.7.1"
