[package]
name = "nats3-client"
version = "0.1.0"
edition = "2021"

[dependencies]
nats3-types = { path = "../types" }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { workspace = true, features = ["derive"]  }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
mockito = "1.7.1"
