[package]
name = "nats3-client"
version = "0.1.0"
edition = "2021"

[dependencies]
nats3-types = { path = "../types" }

serde = { workspace = true, features = ["derive"]  }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

reqwest = { version = "0.12.24", features = ["json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
mockito = "1.7.1"
