[package]
name = "nats3-server"
version = "0.1.0"
edition = "2021"

[features]
integration = []

[dependencies]
nats3-types = { path = "../types" }

anyhow = { workspace = true }
async-nats = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
ulid = { workspace = true }
tracing = { workspace=true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rust-s3 = { workspace=true }
chrono = { workspace=true, features = ["serde"] }

axum = {version = "0.8.7", features = ["macros"]}
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.11.0"
hyper = "1.8.1"
futures = "0.3.31"
lazy_static = "1.5.0"
sha2 = "0.10.9"
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6.7", features = ["full"] }
hyper-util = "0.1.18"
figment = { version = "0.10.19", features = ["env", "toml", "yaml"]}
async-trait = "0.1.89"
prometheus-client = "0.24.0"
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
bb8 = "0.9.1"
bb8-postgres = "0.9.0"
postgres-types = { version = "0.2.11", features = ["derive", "with-chrono-0_4"] }
time = { version = "0.3.44" }
tokio-util = "0.7.17"

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }
testcontainers = "0.26.0"
testcontainers-modules = { version = "0.14.0", features = ["postgres"]}
