[package]
name = "nats3-test"
version = "0.1.0"
edition = "2021"

[dependencies]
nats3-types = { path = "../types" }
nats3-client = { path = "../client" }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

futures = "0.3.31"
async-nats = "0.45"
rust-s3 = "0.37.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9.2"

[[bin]]
name = "nats3-test"
path = "src/main.rs"
