[package]
name = "nats3-test"
version = "0.1.0"
edition = "2021"

[dependencies]
nats3-types = { path = "../types" }
nats3-client = { path = "../client" }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-nats = { workspace = true }
rust-s3 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
chrono = { workspace = true}
uuid = { workspace = true, features = ["v4", "serde"] }

rand = "0.9.2"
futures = "0.3.31"

[[bin]]
name = "nats3-test"
path = "src/main.rs"
